--- a/src/html/sections/content.html
+++ b/src/html/sections/content.html
@@ -29,7 +29,8 @@
 			target="_blank"
 			class="cursor-pointer hover:bg-slate-400 bg-white flex items-center border border-blue-800 border-solid aspect-square w-[130px] px-3 justify-center text-center"
 			href="http://31.129.111.75:5173/checkout/start"
-			>Оформление заказа 1</a
+			>Оформление заказа 1 
+            </a
 		>
 		<a
 			target="_blank"
@@ -87,6 +88,8 @@
 		>
 	</div>
 </div>
+
+<p class="text-red-500"> Оформление заказа 1 и 2 не имеет товаров потому что нужно переходит с корзины к оформлению !</p>
 
 <div class="nav py-10">
 	<h2 class="text-xl mb-3">Публичные страницы</h2>
