--- a/src/html/sections/content.html
+++ b/src/html/sections/content.html
@@ -117,17 +117,13 @@
 			target="_blank"
 			class="cursor-pointer hover:bg-slate-400 bg-white flex items-center border border-blue-800 border-solid aspect-square w-[130px] px-3 justify-center text-center"
 			href="http://31.129.111.75:5173/profile/profile"
-			>Профиль</a
-		>
-
-		<a
-			target="_blank"
-			class="cursor-pointer hover:bg-slate-400 bg-white flex items-center border border-blue-800 border-solid aspect-square w-[130px] px-3 justify-center text-center"
-			href="http://31.129.111.75:5173/profile/favourites"
-			>Избранное</a
-		>
+			>Кабинет</a
+		>	
 	</div>
 </div>
+
+<p class="text-red-500"> Сделанные вкладки : Профиль, Избранное </p>
+
 
 <div class="block py-10">
 	<h2 class="text-xl mb-3">Роуты</h2>
